// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserBlock render renders UserBlock component when the user is authorized 1`] = `
<div
  className="user-block"
>
  <a
    href="/mylist"
    onClick={[Function]}
  >
    <div
      className="user-block__avatar"
    >
      <img
        alt="User avatar"
        height="63"
        src="img/avatar.jpg"
        width="63"
      />
    </div>
  </a>
</div>
`;

exports[`UserBlock render renders UserBlock component when the user is not authorized 1`] = `
<div
  className="user-block"
>
  <a
    className="user-block__link"
    href="/login"
    onClick={[Function]}
  >
    Sign in
  </a>
</div>
`;
